--- a/EventPlanner.Api/EventPlanner.Api.csproj
+++ b/EventPlanner.Api/EventPlanner.Api.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>4570fe39-8fac-4af2-98bf-11a53f9c431e</UserSecretsId>
   </PropertyGroup>
 
 
