--- a/EventPlanner.Application/EventPlanner.Application.csproj
+++ b/EventPlanner.Application/EventPlanner.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="oneof" Version="3.0.271" />
   </ItemGroup>
 
   <PropertyGroup>
